# aurora-bn

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
benches/: api.rs
examples/: dh.rs  joux.rs
src/: arith.rs  groups.rs  lib.rs  prelude.rs
src/fields/: fp.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs  tests.rs
src/groups/: mod.rs  tests.rs
tests/: serialization.rs
