[package]
name = "aurora-bn"
version = "0.1.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "NEAR Inc <hello@near.org>"
]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/aurora-is-near/aurora-bn"
repository = "https://github.com/aurora-is-near/aurora-bn"
license = "MIT OR Apache-2.0"
edition = "2018"

[[bench]]
name = "api"

[features]
default = ["std"]
std = ["serde/std", "rand/std", "byteorder/std"]

[dependencies]
byteorder = { version = "~1.3.4", default-features = true }
rand = { version = "~0.8.3", default-features = true }
serde = { version = "~1.0.125", default-features = true, features = ["derive"] }

[dev-dependencies]
hex = "0.4"
bincode = { version = "1.3.2", default-features = false }
